fixed order width on smaller screen size

--- a/src/components/Order/Order.module.css
+++ b/src/components/Order/Order.module.css
@@ -20,3 +20,9 @@
 .DetailsList li {
     list-style: none;
 }
+
+@media (max-width: 799px) {
+    .Order {
+        width: 90%;
+    }
+}
